[tool.poetry]
name = "thumbhash-python"
version = "0.1.1"
description = "An experimental port of ThumbHash to Python"
authors = ["Lukas Winkler <git@lw1.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<4.0"
pillow = "^11.1.0"
numpy = "^2.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
